--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
         <h1>
             Physik42
         </h1>
+<p>Du hast probleme mit Physik? Dann bist du hier richtig!</p>
     </body>
 </html>
