--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
     <body>
-        <h1>
+        <h1 class="physik42">
             Physik42
         </h1>
-<p>Du hast probleme mit Physik? Dann bist du hier richtig!</p>
+<p>Du hast probleme mit Physik? <br> Dann bist du hier richtig!</p>
+
     </body>
 </html>
