--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+            <link rel="stylesheet" href="stylesheet.css">
+    </head>
     <body>
-        <h1 class="physik42">
+        <h1 align="center" class="physik42">
             Physik42
         </h1>
 <p>Du hast probleme mit Physik? <br> Dann bist du hier richtig!</p>
