--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
 <html>
+    <head>
+            <link rel="stylesheet" href="stylesheet.css">
+    </head>
     <body>
         <h1 class="physik42">
             Physik42
         </h1>
-<p>Du hast probleme mit Physik? <br> Dann bist du hier richtig!</p>
-
+<p>Du hast probleme mit Physik? Dann bist du hier richtig!</p>
     </body>
 </html>
