farbe geändert rot

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
             <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <h1 align="center" class="physik42">
-            Physik42
-        </h1>
-<p>Du hast probleme mit Physik? Dann bist du hier richtig!</p>
+    <h1 align="center" class="physik42">Physik42</h1>
+    <p align="center">Du hast probleme mit Physik?</p>
+    <p align="center"> Dann bist du hier richtig!</p>
     </body>
 </html>
