--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <h1 align="center" class="physik42">
             Physik42
         </h1>
-<p>Du hast probleme mit Physik? Dann bist du hier richtig!</p>
+<p style="font-size:35px;">Du hast probleme mit Physik? Dann bist du hier richtig!</p>
     </body>
 </html>
