--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
             <link rel="stylesheet" href="stylesheet.css">
     </head>
-    <body>
+    <body style="background-color:beige;" >
         <h1 align="center" class="physik42">
             Physik42
         </h1>
