--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+   <html>
     <head>
             <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
 
     <h1 align="center" class="physik42">Physik42</h1>
-    <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
-    <p align="center" style="font-size:35px;"> Dann bist du hier richtig!</p>
+    <p align="center" style="font-size:25px;">Du hast probleme mit Physik?</p>
+    <p align="center" style="font-size:25px;"> Dann bist du hier richtig!</p>
     </body>
 </html>
