--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1 align="center" class="physik42">Physik42</h1>
     <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
     <p align="center" style="font-size:35px;"> Dann bist du hier richtig!</p>
+    <a href="Seite2.html">Weiter geht's</a>
     </body>
 </html>
