--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
    <html>
     <head>
             <link rel="stylesheet" href="stylesheet.css">
+            <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
 
     <h1 align="center" class="physik42">Physik42</h1>
     <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
     <p align="center" style="font-size:35px;"> Dann bist du hier richtig!</p>
-    <a href="Seite2.html">Weiter geht's</a>
+    <div style="text-align: center;margin: auto" class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn-group-lg"><a href="Mechanik.html">Mechanik</a></button>
+            <button type="button" class="btn-group-lg"><a href="Optik.html">Optik</a></button>
+            <button type="button" class="btn-group-lg"><a href="Optik.html">Quantenphysik</a></button>
+          </div>
     </body>
 </html>
