--- a/mechanik.html
+++ b/mechanik.html
@@ -2,9 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>seite2</title>
+<title>Mechanik</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 
+
 <body>
+<table class="table">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Vorher</th>
+      <th>Beim Vorgang</th>
+      <th>Nachher</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>vorher</td>
+            <td>dabei</td>
+                  <td>nachher</td>
+
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>vorher</td>
+            <td>dabei</td>
+                  <td>nachher</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
