--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body style="background-color:powderblue;">
 
     <h1 align="center" class="physik42">Physik42</h1>
     <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
