--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body style="background-color:powderblue;">
 
-    <h1 align="center" class="physik42">Physik42</h1>
+    <h1 style="color:#FD0505;" align="center" class="physik42">Physik42</h1>
     <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
     <p align="center" style="font-size:35px;"> Dann bist du hier richtig!</p>
     
