--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <body style="background-color:powderblue;">
 
     <h1 style="color:#FD0505;" align="center" class="physik42">Physik42</h1>
-    <p align="center" style="font-size:35px;">Du hast probleme mit Physik?</p>
-    <p align="center" style="font-size:35px;"> Dann bist du hier richtig!</p>
+    <p align="center" style="font-size:35px;">Du hast Probleme mit Physikaufgaben?</p>
+    <p align="center" style="font-size:35px;"> Dann bist du hier genau richtig!</p>
     
           <div class="container-fluid">
                 <div class="row">
