--- a/mechanik.html
+++ b/mechanik.html
@@ -33,5 +33,6 @@
     </tr>
   </tbody>
 </table>
+<button type="button" class="btn btn-warning"><a class="whitetext" href="Weiter geht's.html">Weiter geht's</a></button>
 </body>
 </html>
