--- a/mechanik.html
+++ b/mechanik.html
@@ -20,16 +20,43 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>vorher</td>
-            <td>dabei</td>
-                  <td>nachher</td>
+      <td>Typ<select>
+          <option value="Energie">Energie</option></td>
+            <td>Typ<select>
+                <option value="Energie">Energie</option></td>
+                  <td>Typ<select>
+                      <option value="Energie">Energie</option></td>
 
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>vorher</td>
-            <td>dabei</td>
-                  <td>nachher</td>
+      <td>Art<select>
+          <option value="Bewegung">Bewegung</option></td>
+            <td>Art<select>
+            <option value="Bewegung">Bewegung</option></td>
+                  <td>Art<select>
+                  <option value="Bewegung">Bewegung</option></td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Wert
+          <form>
+              <label for="eingabe">Eingabe:
+                <input id="eingabe" name="eingabe">
+              </label></form></td>
+            <td>Wert<select>
+                <option value="Eingabe">Eingabe</option></td>
+                  <td>Wert<select>  
+                      <option value="Eingabe">Eingabe</option></td> 
+    </tr>
+     <tr>
+      <th scope="row">4</th>
+      <td>Einheit<select>
+          <option value="m/s">m/s</option></td>
+            <td>Einheit<select>
+                <option value="m/s">m/s</option></td>
+                  <td>Einheit<select>  
+                      <option value="m/s">m/s</option></td>      
     </tr>
   </tbody>
 </table>
