--- a/mechanik.html
+++ b/mechanik.html
@@ -44,10 +44,16 @@
               <label for="eingabe">Eingabe:
                 <input id="eingabe" name="eingabe">
               </label></form></td>
-            <td>Wert<select>
-                <option value="Eingabe">Eingabe</option></td>
-                  <td>Wert<select>  
-                      <option value="Eingabe">Eingabe</option></td> 
+            <td>Wert
+                <form>
+                    <label for="eingabe">Eingabe:
+                      <input id="eingabe" name="eingabe">
+                    </label></form></td>
+                  <td>Wert
+                      <form>
+                          <label for="eingabe">Eingabe:
+                            <input id="eingabe" name="eingabe">
+                          </label></form></td>
     </tr>
      <tr>
       <th scope="row">4</th>
