--- a/mechanik.html
+++ b/mechanik.html
@@ -39,20 +39,20 @@
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>Wert
+      <td>
           <form>
-              <label for="eingabe">Eingabe:
-                <input id="eingabe" name="eingabe">
+              <label for="Wert">Eingabe:
+                <input id="Wert" name="Wert">
               </label></form></td>
-            <td>Wert
+            <td>
                 <form>
-                    <label for="eingabe">Eingabe:
-                      <input id="eingabe" name="eingabe">
+                    <label for="Wert">Eingabe:
+                      <input id="Wert" name="Wert">
                     </label></form></td>
-                  <td>Wert
+                  <td>
                       <form>
-                          <label for="eingabe">Eingabe:
-                            <input id="eingabe" name="eingabe">
+                          <label for="Wert">Eingabe:
+                            <input id="Wert" name="Wert">
                           </label></form></td>
     </tr>
      <tr>
