Was ist gegeben???

--- a/mechanik.html
+++ b/mechanik.html
@@ -8,6 +8,8 @@
 
 
 <body>
+    <h1 style="color:#FD0505;" align="center" class="Was ist gegeben?">Was ist gegeben?</h1>
+    <p align="center" style="font-size:35px;">Trage bitte alle gegebenen Daten ein.</p>
 <table class="table">
   <thead>
     <tr>
