--- a/mechanik.html
+++ b/mechanik.html
@@ -20,7 +20,7 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Typ<select>
+		<td>Typ</td><select>
           <option value="Energie">Energie</option></td>
             <td>Typ<select>
                 <option value="Energie">Energie</option></td>
