--- a/gesuchtmechanik.html
+++ b/gesuchtmechanik.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<h1 style="color:#FD0505;" align="center" class="Was ist gegeben?">Was ist gegeben?</h1>
-<p align="center" style="font-size:35px;">Trage bitte alle gegebenen Daten ein.</p>
+<h1 style="color:#FD0505;" align="center" class="Was ist gesucht?">Was ist gesucht?</h1>
+<p align="center" style="font-size:35px;">Trage bitte alle gesuchten Daten ein.</p>
 <table class="table">
   <thead>
     <tr>
@@ -25,11 +25,10 @@
     <tr>
   
   <th scope="row">1</th>
-  <td>Typ
+  <td>Typ</td>
     <select>
   
   <option value="Energie">Energie</option>
-  </select>
     </td>
   
     <td>
