--- a/Quantenphysik.html
+++ b/Quantenphysik.html
@@ -68,6 +68,6 @@
     </tr>
   </tbody>
 </table>
-<button type="button" class="btn btn-warning"><a class="whitetext" href="Weiter geht's.html">Weiter geht's</a></button>
+<button type="button" class="btn btn-warning"><a class="whitetext" href="gesuchtquantenphysik.html">Weiter geht's</a></button>
 </body>
 </html>
