--- a/gesuchtquantenphysik.html
+++ b/gesuchtquantenphysik.html
@@ -25,10 +25,19 @@
     <tr>
   
   <th scope="row">1</th>
-  <td>Typ</td>
+  <td>Typ
     <select>
   
   <option value="Energie">Energie</option>
+   </select>
+    </td>
+  
+    <td>
+    Typ
+    </select>
+  
+  <option value="Energie">Energie</option>
+   </select>
     </td>
   
     <td>
@@ -36,13 +45,7 @@
     <select>
   
   <option value="Energie">Energie</option>
-    </td>
-  
-    <td>
-    Typ
-    <select>
-  
-  <option value="Energie">Energie</option>
+   </select>
     </td>
   
     </tr>
@@ -58,6 +61,7 @@
     <select>
   
   <option value="Bewegung">Bewegung</option>
+    </select>
     </td>
   
     <td>
@@ -65,6 +69,7 @@
     <select>
   
   <option value="Bewegung">Bewegung</option>
+    </select>
     </td>
   
     <td>
@@ -72,6 +77,8 @@
     <select>
   
   <option value="Bewegung">Bewegung</option>
+    </select>
+    
     </td>
   
     </tr>
