--- a/mechanik.html
+++ b/mechanik.html
@@ -1,79 +1,65 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Mechanik
+  <meta charset="utf-8">
+  <title>Mechanik
     <link rel="stylesheet" href="stylesheet.css">
-</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  </title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
 </head>
 <body>
-<h1 style="color:#FD0505;" align="center" class="Was ist gegeben?">Was ist gegeben?</h1>
-<p align="center" style="font-size:35px;">Trage bitte alle gegebenen Daten ein.</p>
-<table class="table">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Vorher</th>
-      <th>Beim Vorgang</th>
-      <th>Nachher</th>
-    </tr>
-  </thead>
+  <h1 style="color:#FD0505;" align="center" class="Was ist gegeben?">Was ist gegeben?</h1>
+  <p align="center" style="font-size:35px;">Trage bitte alle gegebenen Daten ein.</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Vorher</th>
+        <th>Beim Vorgang</th>
+        <th>Nachher</th>
+      </tr>
+    </thead>
     <tbody>
-  
-    <tr>
-  
-  <th scope="row">1</th>
-  <td>Typ
-    <select>
-  
+      <tr>
+        <th scope="row">1</th>
+        <td>Typ
+          <select>
   <option value="Energie">Energie</option>
   </select>
-    </td>
-  
-    <td>
-    Typ
-    <select>
-  
+        </td>
+        <td>
+          Typ
+          <select>
   <option value="Energie">Energie</option>
-    </td>
-  
-    <td>
-    Typ
-    <select>
-  
+         </td>
+         <td>Typ
+          <select>
   <option value="Energie">Energie</option>
-    </td>
-  
-    </tr>
-  
-    <tr>
-  
-    <th scope="row">
-    2
-    </th>
-  
-    <td>
-    Art
-    <select>
-  
+         </td>
+         </tr>
+         <tr>
+      <th scope="row">2
+        </th>
+         <td>Art
+        <select>
   <option value="Bewegung">Bewegung</option>
-    </td>
-    <td>Art
-    <select>
+         </td>
+         <td>Art
+         <select>
   <option value="Bewegung">Bewegung</option>
-    </td>
-    <td>Art
-    <select>
+          </td>
+         <td>Art
+         <select>
   <option value="Bewegung">Bewegung</option>
-    </td>
-    </tr>
-    <tr>
-    <th scope="row">3
-    </th>
-    <td>
-    <form>
-    <label for="Wert">
+         </td>
+         </tr>
+          <tr>
+      <th scope="row">3
+        </th>
+         <td>
+        <form>
+       <label for="Wert">
     Eingabe:      
     <input id="Wert" name="Wert">
     </label>
