--- a/mechanik.html
+++ b/mechanik.html
@@ -75,7 +75,7 @@
     </tr>
   </tbody>
 </table>
-<hr>
+<hr noshade color= #000000>
 <button type="button" class="btn btn-warning"><a class="whitetext" href="gesuchtmechanik.html">Weiter geht's</a></button>
 </body>
 </html>
