--- a/Optik.html
+++ b/Optik.html
@@ -21,6 +21,7 @@
     <tr>
       <th scope="row">1</th>
       <td>Typ<select>
+          <option value="-">-</option>
           <option value="Energie">Energie</option></td>
             <td>Typ<select>
                 <option value="Energie">Energie</option></td>
