--- a/mechanik.html
+++ b/mechanik.html
@@ -21,12 +21,15 @@
     <tr>
       <th scope="row">1</th>
       <td>Typ<select>
+          <option value="-">-</option>
           <option value="Energie">Energie</option></td>
               </select>
             <td>Typ<select>
+                <option value="-">-</option>
                 <option value="Energie">Energie</option></td>
               </select>
                   <td>Typ<select>
+                      <option value="-">-</option>
                       <option value="Energie">Energie</option></td>
               </select>
 
@@ -34,12 +37,15 @@
     <tr>
       <th scope="row">2</th>
       <td>Art<select>
+          <option value="-">-</option>
           <option value="Bewegung">Bewegung</option></td>
               </select>
             <td>Art<select>
+            <option value="-">-</option>
             <option value="Bewegung">Bewegung</option></td>
               </select>
                   <td>Art<select>
+                  <option value="-">-</option>
                   <option value="Bewegung">Bewegung</option></td>
              </select>
     </tr>
@@ -64,18 +70,90 @@
      <tr>
       <th scope="row">4</th>
       <td>Einheit<select>
+          <option value="-">-</option>
           <option value="m/s">m/s</option></td>
                 </select>
             <td>Einheit<select>
+                <option value="-">-</option>
                 <option value="m/s">m/s</option></td>
                 </select>
                   <td>Einheit<select>  
+                      <option value="-">-</option>
                       <option value="m/s">m/s</option></td>    
                  </select>  
     </tr>
   </tbody>
 </table>
-<hr>
+<hr noshade color= #000000>
+<table class="table">
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Typ<select>
+            <option value="-">-</option>
+            <option value="Energie">Energie</option></td>
+                </select>
+              <td>Typ<select>
+                  <option value="-">-</option>
+                  <option value="Energie">Energie</option></td>
+                </select>
+                    <td>Typ<select>
+                        <option value="-">-</option>
+                        <option value="Energie">Energie</option></td>
+                </select>
+  
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Art<select>
+            <option value="-">-</option>
+            <option value="Bewegung">Bewegung</option></td>
+                </select>
+              <td>Art<select>
+              <option value="-">-</option>
+              <option value="Bewegung">Bewegung</option></td>
+                </select>
+                    <td>Art<select>
+                    <option value="-">-</option>
+                    <option value="Bewegung">Bewegung</option></td>
+               </select>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>
+            <form>
+                <label for="Wert">Eingabe:
+                  <input id="Wert" name="Wert">
+                </label></form></td>
+              <td>
+                  <form>
+                      <label for="Wert">Eingabe:
+                        <input id="Wert" name="Wert">
+                      </label></form></td>
+                    <td>
+                        <form>
+                            <label for="Wert">Eingabe:
+                              <input id="Wert" name="Wert">
+                            </label></form></td>
+      </tr>
+       <tr>
+        <th scope="row">4</th>
+        <td>Einheit<select>
+            <option value="-">-</option>
+            <option value="m/s">m/s</option></td>
+                  </select>
+              <td>Einheit<select>
+                  <option value="-">-</option>
+                  <option value="m/s">m/s</option></td>
+                  </select>
+                    <td>Einheit<select>  
+                        <option value="-">-</option>
+                        <option value="m/s">m/s</option></td>    
+                   </select>  
+      </tr>
+    </tbody>
+  </table>
+  <hr noshade color= #000000>
 <button type="button" class="btn btn-warning"><a class="whitetext" href="gesuchtmechanik.html">Weiter geht's</a></button>
 </body>
 </html>
