--- a/Lösung.html
+++ b/Lösung.html
@@ -17,6 +17,7 @@
  <body style="background-color:#86DF9C;">
  <h1 style="color:#45AC01;" align="center" class="Dein Ergebnis">Dein Ergebnis</h1>
  <p align="center" style="font-size:35px;">Rechnung:</p>
- <p align="center" style="font-size:35px;"> XXX </p>     
+ <p align="center" style="font-size:35px;"> XXX </p>   
+ <button type="button" class="btn btn-warning"><a class="whitetext" href="index.html">Wieder zur Startseite</a></button>  
  </body>
 </html>
