--- a/mechanik.html
+++ b/mechanik.html
@@ -53,17 +53,17 @@
       <th scope="row">3</th>
       <td>
           <form>
-              <label for="Wert">Eingabe:
+              <label for="Wert">Wert:
                 <input id="Wert" name="Wert">
               </label></form></td>
             <td>
                 <form>
-                    <label for="Wert">Eingabe:
+                    <label for="Wert">Wert:
                       <input id="Wert" name="Wert">
                     </label></form></td>
                   <td>
                       <form>
-                          <label for="Wert">Eingabe:
+                          <label for="Wert">Wert:
                             <input id="Wert" name="Wert">
                           </label></form></td>
     </tr>
@@ -122,17 +122,17 @@
         <th scope="row">3</th>
         <td>
             <form>
-                <label for="Wert">Eingabe:
+                <label for="Wert">Wert:
                   <input id="Wert" name="Wert">
                 </label></form></td>
               <td>
                   <form>
-                      <label for="Wert">Eingabe:
+                      <label for="Wert">Wert:
                         <input id="Wert" name="Wert">
                       </label></form></td>
                     <td>
                         <form>
-                            <label for="Wert">Eingabe:
+                            <label for="Wert">Wert:
                               <input id="Wert" name="Wert">
                             </label></form></td>
       </tr>
