--- a/gesuchtmechanik.html
+++ b/gesuchtmechanik.html
@@ -21,12 +21,15 @@
     <tr>
       <th scope="row">1</th>
       <td>Typ<select>
+          <option value="-">-</option>
           <option value="Energie">Energie</option></td>
               </select>
             <td>Typ<select>
+                <option value="-">-</option>
                 <option value="Energie">Energie</option></td>
               </select>
                   <td>Typ<select>
+                      <option value="-">-</option>
                       <option value="Energie">Energie</option></td>
               </select>
 
@@ -34,24 +37,30 @@
     <tr>
       <th scope="row">2</th>
       <td>Art<select>
+          <option value="-">-</option>
           <option value="Bewegung">Bewegung</option></td>
               </select>
             <td>Art<select>
+                <option value="-">-</option>
             <option value="Bewegung">Bewegung</option></td>
               </select>
                   <td>Art<select>
+                      <option value="-">-</option>
                   <option value="Bewegung">Bewegung</option></td>
              </select>
     </tr>
      <tr>
       <th scope="row">3</th>
       <td>Einheit<select>
+          <option value="-">-</option>
           <option value="m/s">m/s</option></td>
                 </select>
             <td>Einheit<select>
+                <option value="-">-</option>
                 <option value="m/s">m/s</option></td>
                 </select>
                   <td>Einheit<select>  
+                      <option value="-">-</option>
                       <option value="m/s">m/s</option></td>    
                  </select>  
     </tr>
