--- a/gesuchtmechanik.html
+++ b/gesuchtmechanik.html
@@ -26,7 +26,8 @@
               </select>
             <td>Typ<select>
                 <option value="-">-</option>
-                <option value="Energie">Energie</option></td>
+                <option value="Energie">Energie</option>
+                </td>
               </select>
                   <td>Typ<select>
                       <option value="-">-</option>
@@ -39,10 +40,13 @@
       <td>Art<select>
           <option value="-">-</option>
           <option value="Bewegung">Bewegung</option></td>
+             
               </select>
             <td>Art<select>
                 <option value="-">-</option>
-            <option value="Bewegung">Bewegung</option></td>
+            <option value="Bewegung">Bewegung</option>
+                             <option value="arbeit">Arbeit</option>
+                             </td>
               </select>
                   <td>Art<select>
                       <option value="-">-</option>
@@ -57,7 +61,9 @@
                 </select>
             <td>Einheit<select>
                 <option value="-">-</option>
-                <option value="m/s">m/s</option></td>
+                          <option value="Joule ">Joule </option>
+                        <option value="kiloJoule ">Kilo-Joule </option> 
+                        </td>
                 </select>
                   <td>Einheit<select>  
                       <option value="-">-</option>
