--- a/mechanik.html
+++ b/mechanik.html
@@ -38,7 +38,11 @@
       <th scope="row">2</th>
       <td>Art<select>
           <option value="-">-</option>
-          <option value="Bewegung">Bewegung</option></td>
+            <option value="potentiell">potentiell</option>
+                        <option value="kinetisch">kinetisch</option>
+                                    
+          <option value="Bewegung">Bewegung</option>
+             </td>
               </select>
             <td>Art<select>
             <option value="-">-</option>
@@ -46,7 +50,10 @@
               </select>
                   <td>Art<select>
                   <option value="-">-</option>
-                  <option value="Bewegung">Bewegung</option></td>
+            <option value="potentiell">potentiell</option>
+                        <option value="kinetisch">kinetisch</option>
+                                    
+          <option value="Bewegung">Bewegung</option>
              </select>
     </tr>
     <tr>
@@ -71,15 +78,18 @@
       <th scope="row">4</th>
       <td>Einheit<select>
           <option value="-">-</option>
-          <option value="m/s">m/s</option></td>
+          <option value="Joule ">Joule </option>
+                        <option value="kiloJoule ">Kilo-Joule </option>
+               </td>
                 </select>
             <td>Einheit<select>
                 <option value="-">-</option>
-                <option value="m/s">m/s</option></td>
+                <option value="Joule ">Joule </option></td>
                 </select>
                   <td>Einheit<select>  
                       <option value="-">-</option>
-                      <option value="m/s">m/s</option></td>    
+          <option value="Joule ">Joule </option>
+                        <option value="kiloJoule ">Kilo-Joule </option> 
                  </select>  
     </tr>
   </tbody>
