--- a/Lösung.html
+++ b/Lösung.html
@@ -17,8 +17,19 @@
  <body style="background-color:#86DF9C;">
  <h1 style="color:#45AC01;" align="center" class="Dein Ergebnis">Dein Ergebnis</h1>
  <p align="center" style="font-size:35px;">Rechnung:</p>
- <div align="center"> <input   type="text" placeholder="Ergebnis" />  
- </div> 
+ <p align="center"><strong>gegeben: </strong></p>
+ <p align="center">m= 1000Kg</p>
+ <p align="center"> h= 10m</p>
+ <p align="center">  g= 9,81m/s&sup2;</p>
+ <p align="center"><strong>gesucht:</strong></p>
+ <p align="center"> E (Energie)</p>
+ <p align="center"><strong>Rechnung: </strong></p>
+ <p align="center">E=m*g*h </p>
+ <p align="center">=&gt; E = 1000Kg *&nbsp; 9,81m/s&sup2;* 10m </p>
+ <p align="center">&nbsp;<strong>Ergebnis:</strong></p>
+ <p align="center">E=98100j &nbsp;= 98,1Kj </p>
+ <p>&nbsp;</p>
+ <p>&nbsp;</p>
  <button type="button" class="btn btn-warning"><a class="whitetext" href="index.html">Wieder zur Startseite</a></button>  
  </body>
 </html>
