--- a/gesuchtmechanik.html
+++ b/gesuchtmechanik.html
@@ -27,6 +27,7 @@
             <td>Typ<select>
                 <option value="-">-</option>
                 <option value="Energie">Energie</option>
+                 <option value="materie">Materie</option>
                 </td>
               </select>
                   <td>Typ<select>
