--- a/mechanik.html
+++ b/mechanik.html
@@ -22,7 +22,9 @@
       <th scope="row">1</th>
       <td>Typ<select>
           <option value="-">-</option>
-          <option value="Energie">Energie</option></td>
+          <option value="Energie">Energie</option>
+            <option value="materie">Materie</option>
+             </td>
               </select>
             <td>Typ<select>
                 <option value="-">-</option>
@@ -30,7 +32,9 @@
               </select>
                   <td>Typ<select>
                       <option value="-">-</option>
-                      <option value="Energie">Energie</option></td>
+                      <option value="Energie">Energie</option>
+                       <option value="materie">Materie</option>
+                      </td>
               </select>
 
     </tr>
